--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
-    "react-day-picker": "^8.10.1",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
